python to TS complete
